Fixed logo pixel overflow

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -16,6 +16,8 @@
   width: rem(42);
   height: rem(41);
   background-image: url('../img/logo/p--small.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .transparency {
